[gd_scene load_steps=8 format=3 uid="uid://dpc82qm4v717x"]

[ext_resource type="Script" uid="uid://d0j17u57glsw6" path="res://Root/Main/main.gd" id="1_th7xa"]
[ext_resource type="Texture2D" uid="uid://b0evji5mq5mk5" path="res://Sprites/Board.svg" id="2_th7xa"]
[ext_resource type="Texture2D" uid="uid://cqdiu48bafima" path="res://Sprites/LighterColour.svg" id="3_50vke"]
[ext_resource type="Texture2D" uid="uid://crwjtrip521kn" path="res://Sprites/SketchTargetSelect.png" id="3_b5gtr"]
[ext_resource type="Texture2D" uid="uid://bhxdjut18d871" path="res://Sprites/SketchSelect.png" id="4_ymg86"]
[ext_resource type="AudioStream" uid="uid://bcemh5uohctui" path="res://Sounds/Hover.wav" id="5_dn23c"]
[ext_resource type="AudioStream" uid="uid://b7123um0cumph" path="res://Sounds/Select.wav" id="6_lsap4"]

[node name="Main" type="Node"]
script = ExtResource("1_th7xa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Board" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_th7xa")
expand_mode = 1

[node name="Root" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StatsContainer" type="HBoxContainer" parent="CanvasLayer/Control/Root"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Stats" type="VBoxContainer" parent="CanvasLayer/Control/Root/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="P2" type="VBoxContainer" parent="CanvasLayer/Control/Root/StatsContainer/Stats"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="P2NameLabel" type="Label" parent="CanvasLayer/Control/Root/StatsContainer/Stats/P2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 3
text = "AI"

[node name="P2HealthLabel" type="Label" parent="CanvasLayer/Control/Root/StatsContainer/Stats/P2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2ManaLabel" type="BoxContainer" parent="CanvasLayer/Control/Root/StatsContainer/Stats/P2"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2

[node name="Deck" type="VBoxContainer" parent="CanvasLayer/Control/Root/StatsContainer/Stats"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Root/StatsContainer/Stats/Deck"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_50vke")

[node name="Deck" type="CenterContainer" parent="CanvasLayer/Control/Root/StatsContainer/Stats/Deck"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 20.0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/StatsContainer/Stats/Deck/Deck"]

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/Root/StatsContainer/Stats/Deck"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_50vke")

[node name="P1" type="VBoxContainer" parent="CanvasLayer/Control/Root/StatsContainer/Stats"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="P1Name" type="Label" parent="CanvasLayer/Control/Root/StatsContainer/Stats/P1"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 3
text = "NAME 2"

[node name="P1HealthLabel" type="Label" parent="CanvasLayer/Control/Root/StatsContainer/Stats/P1"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P1ManaLabel" type="CenterContainer" parent="CanvasLayer/Control/Root/StatsContainer/Stats/P1"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Root/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_50vke")

[node name="Middle" type="VBoxContainer" parent="CanvasLayer/Control/Root"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
mouse_filter = 2

[node name="Player2Hand" type="HBoxContainer" parent="CanvasLayer/Control/Root/Middle"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Player2Card1" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card1"]
position = Vector2(69, 88)

[node name="Player2Card2" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card2"]
position = Vector2(71, 88)

[node name="Player2Card3" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card3"]
position = Vector2(69, 88)

[node name="Player2Card4" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card4"]
position = Vector2(69, 88)

[node name="Player2Card5" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card5"]
position = Vector2(67, 88)

[node name="Player2Card6" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card6"]
position = Vector2(69, 88)

[node name="Player2Table" type="HBoxContainer" parent="CanvasLayer/Control/Root/Middle"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Player2Card1" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Table"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card1"]
position = Vector2(104, 83)

[node name="Player2Card2" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Table"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card2"]
position = Vector2(104, 83)

[node name="Player2Card3" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Table"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card3"]
position = Vector2(104, 83)

[node name="Player2Card4" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/Player2Table"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card4"]
position = Vector2(104, 83)

[node name="Player1Table" type="HBoxContainer" parent="CanvasLayer/Control/Root/Middle"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Player1Card1" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Table"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card1"]
position = Vector2(104, 86)

[node name="TargetSelect" type="Sprite2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card1"]
visible = false
position = Vector2(104, 86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_b5gtr")

[node name="Select" type="Sprite2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card1"]
visible = false
position = Vector2(104, 86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ymg86")

[node name="Player1Card2" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Table"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card2"]
position = Vector2(104, 86)

[node name="TargetSelect" type="Sprite2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card2"]
visible = false
position = Vector2(104, 86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_b5gtr")

[node name="Select" type="Sprite2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card2"]
visible = false
position = Vector2(104, 86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ymg86")

[node name="Player1Card3" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Table"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card3"]
position = Vector2(104, 86)

[node name="TargetSelect" type="Sprite2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card3"]
visible = false
position = Vector2(104, 86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_b5gtr")

[node name="Select" type="Sprite2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card3"]
visible = false
position = Vector2(104, 86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ymg86")

[node name="Player1Card4" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Table"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card4"]
position = Vector2(104, 86)

[node name="TargetSelect" type="Sprite2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card4"]
visible = false
position = Vector2(105, 86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_b5gtr")

[node name="TargetSelect2" type="Sprite2D" parent="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card4"]
visible = false
position = Vector2(105, 86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ymg86")

[node name="Player1Hand" type="HBoxContainer" parent="CanvasLayer/Control/Root/Middle"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Player1Hand1" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Hand"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand1"]
position = Vector2(69, 89)

[node name="Player1Hand2" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Hand"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand2"]
position = Vector2(71, 89)

[node name="Player1Hand3" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Hand"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand3"]
position = Vector2(69, 89)

[node name="Player1Hand4" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Hand"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand4"]
position = Vector2(69, 89)

[node name="Player1Hand5" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Hand"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand5"]
position = Vector2(67, 89)

[node name="Player1Hand6" type="Button" parent="CanvasLayer/Control/Root/Middle/Player1Hand"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand6"]
position = Vector2(69, 89)

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer/Control/Root/Middle"]

[node name="BotchLines" type="VBoxContainer" parent="CanvasLayer/Control/Root/Middle/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 216.0
offset_right = -216.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Spacer" type="VBoxContainer" parent="CanvasLayer/Control/Root/Middle/CanvasLayer/BotchLines"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Spacer2" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/CanvasLayer/BotchLines/Spacer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Root/Middle/CanvasLayer/BotchLines/Spacer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("3_50vke")

[node name="Spacer2" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/CanvasLayer/BotchLines"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Spacer3" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/CanvasLayer/BotchLines"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Spacer4" type="VBoxContainer" parent="CanvasLayer/Control/Root/Middle/CanvasLayer/BotchLines"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/Root/Middle/CanvasLayer/BotchLines/Spacer4"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("3_50vke")

[node name="Spacer2" type="BoxContainer" parent="CanvasLayer/Control/Root/Middle/CanvasLayer/BotchLines/Spacer4"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="RightContainer" type="HBoxContainer" parent="CanvasLayer/Control/Root"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Root/RightContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_50vke")

[node name="Right" type="VBoxContainer" parent="CanvasLayer/Control/Root/RightContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="LabelMargin" type="BoxContainer" parent="CanvasLayer/Control/Root/RightContainer/Right"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5

[node name="CardDescription" type="Label" parent="CanvasLayer/Control/Root/RightContainer/Right/LabelMargin"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Placsdcerrshodler"
autowrap_mode = 2

[node name="BoxContainer2" type="BoxContainer" parent="CanvasLayer/Control/Root/RightContainer/Right"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/Control/Root/RightContainer/Right/BoxContainer2"]

[node name="Button" type="Button" parent="CanvasLayer/Control/Root/RightContainer/Right/BoxContainer2/Marker2D"]
offset_left = 44.0
offset_top = 45.0
offset_right = 192.0
offset_bottom = 186.0
size_flags_horizontal = 3
text = "END TURN"

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_dn23c")
volume_db = -15.0

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_lsap4")
volume_db = -15.0

[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card1" to="." method="card_hover_enter" binds= [6]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card1" to="." method="card_hover_exit"]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card2" to="." method="card_hover_enter" binds= [7]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card2" to="." method="card_hover_exit"]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card3" to="." method="card_hover_enter" binds= [8]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card3" to="." method="card_hover_exit"]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card4" to="." method="card_hover_enter" binds= [9]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card4" to="." method="card_hover_exit"]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card5" to="." method="card_hover_enter" binds= [10]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card5" to="." method="card_hover_exit"]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card6" to="." method="card_hover_enter" binds= [11]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Hand/Player2Card6" to="." method="card_hover_exit"]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card1" to="." method="tile_hover_enter" binds= [4]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card1" to="." method="tile_hover_exit" binds= [4]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card2" to="." method="tile_hover_enter" binds= [5]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card2" to="." method="tile_hover_exit" binds= [5]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card3" to="." method="tile_hover_enter" binds= [6]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card3" to="." method="tile_hover_exit" binds= [6]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card4" to="." method="tile_hover_enter" binds= [7]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player2Table/Player2Card4" to="." method="tile_hover_exit" binds= [7]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card1" to="." method="tile_hover_enter" binds= [0]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card1" to="." method="tile_hover_exit" binds= [0]]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card1" to="." method="tile_selected" binds= [0]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card2" to="." method="tile_hover_enter" binds= [1]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card2" to="." method="tile_hover_exit" binds= [1]]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card2" to="." method="tile_selected" binds= [1]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card3" to="." method="tile_hover_enter" binds= [2]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card3" to="." method="tile_hover_exit" binds= [2]]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card3" to="." method="tile_selected" binds= [2]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card4" to="." method="tile_hover_enter" binds= [3]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card4" to="." method="tile_hover_exit" binds= [3]]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Table/Player1Card4" to="." method="tile_selected" binds= [3]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand1" to="." method="card_hover_enter" binds= [0]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand1" to="." method="card_hover_exit"]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand1" to="." method="card_selected" binds= [0]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand2" to="." method="card_hover_enter" binds= [1]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand2" to="." method="card_hover_exit"]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand2" to="." method="card_selected" binds= [1]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand3" to="." method="card_hover_enter" binds= [2]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand3" to="." method="card_hover_exit"]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand3" to="." method="card_selected" binds= [2]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand4" to="." method="card_hover_enter" binds= [3]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand4" to="." method="card_hover_exit"]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand4" to="." method="card_selected" binds= [3]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand5" to="." method="card_hover_enter" binds= [4]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand5" to="." method="card_hover_exit"]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand5" to="." method="card_selected" binds= [4]]
[connection signal="mouse_entered" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand6" to="." method="card_hover_enter" binds= [5]]
[connection signal="mouse_exited" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand6" to="." method="card_hover_exit"]
[connection signal="pressed" from="CanvasLayer/Control/Root/Middle/Player1Hand/Player1Hand6" to="." method="card_selected" binds= [5]]
[connection signal="pressed" from="CanvasLayer/Control/Root/RightContainer/Right/BoxContainer2/Marker2D/Button" to="." method="end_turn"]
